--- a/gb/20/1/14/n11793267.md
+++ b/gb/20/1/14/n11793267.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yulmo2191/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yulmo2191/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yulmo2191/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yulmo2191/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yulmo2191/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yulmo2191/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yulmo2191/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yulmo2191/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/yulmo2191/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yulmo2191/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yulmo2191/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yulmo2191/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yulmo2191/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>拔牙的同时就能戴上的“即刻假牙”</h2>
 
 <h6></h6>
 <hr>
 <p><span style="color: #993300;"><strong>文 | 千卉</strong></span></p>
-<p>许多读者都已经知道，拔牙后患者需要等待3个月才可以开始制作活动<ahref="https://github.com/yulmo2191/djy/blob/master/gb/tag/%E5%81%87%E7%89%99.md#1">假牙</a>。可是患者在这3个月内没有牙，如何解决社交及饮食等方面诸多的不便呢？魁省可摘<ahref="https://github.com/yulmo2191/djy/blob/master/gb/tag/%E4%B9%89%E9%BD%BF.md#1">义齿</a>镶复医师（Denturologiste）<ahref="https://github.com/yulmo2191/djy/blob/master/gb/tag/%E5%91%A8%E5%BF%97%E9%98%B3.md#1">周志阳</a>先生告诉我们，患者可以选择佩戴“即刻假牙”解决这一问题。</p>
-<p>即刻<ahref="https://github.com/yulmo2191/djy/blob/master/gb/tag/%E5%81%87%E7%89%99.md#1">假牙</a>是指，拔牙后可立即佩戴的假牙，也称为临时预成假牙。它可帮助患者在3个月的牙槽骨恢复期间内继续正常生活。佩戴即刻假牙的主要益处很简单：帮助患者在拔牙后，立即继续正常生活。患者可以吃喜爱的食物，同时不对剩余天然牙造成过大的压力。当在3个月后佩戴正式假牙时，患者已经有了佩戴假牙的经验。这对患者佩戴假牙的初期适应阶段非常有益。</p>
+<p>许多读者都已经知道，拔牙后患者需要等待3个月才可以开始制作活动<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%87%E7%89%99.md#1">假牙</a>。可是患者在这3个月内没有牙，如何解决社交及饮食等方面诸多的不便呢？魁省可摘<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%89%E9%BD%BF.md#1">义齿</a>镶复医师（Denturologiste）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%91%A8%E5%BF%97%E9%98%B3.md#1">周志阳</a>先生告诉我们，患者可以选择佩戴“即刻假牙”解决这一问题。</p>
+<p>即刻<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%87%E7%89%99.md#1">假牙</a>是指，拔牙后可立即佩戴的假牙，也称为临时预成假牙。它可帮助患者在3个月的牙槽骨恢复期间内继续正常生活。佩戴即刻假牙的主要益处很简单：帮助患者在拔牙后，立即继续正常生活。患者可以吃喜爱的食物，同时不对剩余天然牙造成过大的压力。当在3个月后佩戴正式假牙时，患者已经有了佩戴假牙的经验。这对患者佩戴假牙的初期适应阶段非常有益。</p>
 <h2>需在拔牙前两至三周预约</h2>
-<p>若患者选择接受即刻假牙，需要在拔牙前两至三周联系可摘<ahref="https://github.com/yulmo2191/djy/blob/master/gb/tag/%E4%B9%89%E9%BD%BF.md#1">义齿</a>镶复医师。这是因为即刻假牙的制作方法与正式假牙不同：医师将在拔牙前，在患者的口腔内取模，以便拔牙后患者可以立刻戴牙。</p>
+<p>若患者选择接受即刻假牙，需要在拔牙前两至三周联系可摘<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%89%E9%BD%BF.md#1">义齿</a>镶复医师。这是因为即刻假牙的制作方法与正式假牙不同：医师将在拔牙前，在患者的口腔内取模，以便拔牙后患者可以立刻戴牙。</p>
 <h2>戴牙后48小时内不可取下</h2>
 <p>拔牙后，病人必须持续佩戴即刻假牙48小时。即使睡觉的时候也不可摘下，因为如果不带着睡觉，第二天早上术后水肿可能使假牙无法戴上。48小时以后，病人应该取下假牙才能去睡觉。</p>
 <h2>无法试戴</h2>
@@ -21,41 +21,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/5/1/n12074522.md#1">应对疫情冲击 蒙城 La Mer鱼市推新服务</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/4/n12003536.md#1">在家辅导孩子难？魁北克免费网课受欢迎</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/3/19/n11952466.md#1">魁北克人出现疑似症状该怎么办？</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/2/24/n11893131.md#1">今年回中国镶牙？太危险了！</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/1/14/n11793283.md#1">在魁北克镶牙究竟要花多少钱？</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/19/12/4/n11700673.md#1">央视“315晚会”曝光国产假牙加工黑幕</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/19/12/4/n11700706.md#1">大蒙特利尔区圣诞集市11月底相继开放</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/19/11/5/n11635528.md#1">缺牙后多久镶牙最合适？</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/1/14/n11793222.md#1">害人不浅的“单侧活动桥”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/24/n13111483.md#1">常犯的驾驶坏习惯（下）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/17/n13094574.md#1">常犯的驾驶坏习惯（中）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/9/n13079704.md#1">常犯的驾驶坏习惯（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/3/n13064724.md#1">狂风中驾驶5大提示（下）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/6/25/n13048329.md#1">狂风中驾驶5大提示（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/6/11/n13016186.md#1">夏季露营与野生动物（2）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/6/4/n13000013.md#1">夏季露营与野生动物（1）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/6/4/n12999984.md#1">夏日安全露营10大攻略</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/3/8/n12797764.md#1">魁北克省疫情后10大紧缺职业</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/12/11/n12614241.md#1">冰箱法则：剩菜能冷藏多久？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/yulmo2191/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/30/n12074206.md#1">为何改变对习近平看法 川普首次详细说明</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/30/n12073816.md#1">【有冇搞错】傅政华四千公安要挟 习近平失平衡</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/30/n12072328.md#1">尼米兹号重返亚太 云峰试射成功 美台连盟抗共</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/30/n12073372.md#1">英医疗界：中国产呼吸机可致病人于死地</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/30/n12073295.md#1">海南大学退休女教授又被查 运动真来了？</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/29/n12069700.md#1">《少年Pi》里成年Pi的伊凡卡汉病逝 享年53岁</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/29/n12070504.md#1">中共再祭影视战狼条款 港台艺人或动辄遭索赔</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/30/n12071809.md#1">印度一部电影在同一戏院每天放映 连续24年</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/29/n12070642.md#1">范冰冰名誉权案二审胜诉 被告赔偿数涨至十倍</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/30/n12071652.md#1">琼瑶剧女星陈德容惊曝离婚 去年8月已签字</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/23/n12054891.md#1">【文史】崇祯展开刘伯温遗画 惊见自己结局</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/27/n12063415.md#1">【细语人生】FBI盯上了他（上）</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/26/n12062868.md#1">神游瑰丽天国 虚云和尚尘缘未了暂返人间</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/29/n12070494.md#1">玄武大帝除疫禳灾 人间留神迹</a></li>
-<li><a href="https://github.com/yulmo2191/djy/blob/master/gb/20/4/29/n12070777.md#1">专管掠走命外之财的冥府武官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yulmo2191/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yulmo2191/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/14/n11793267.htm">拔牙的同时就能戴上的“即刻假牙”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/14/n11793267.htm">拔牙的同时就能戴上的“即刻假牙”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/yulmo2191/djy/blob/master/gb/20/1/14/n11793267.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yulmo2191/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yulmo2191/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yulmo2191/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yulmo2191/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yulmo2191/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/1/14/n11793267.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
